--- a/index.html
+++ b/index.html
@@ -38,6 +38,6 @@
         </div>
       </div>
     </div>
-    <script src="script.js"></script>
+    <script src="./assets/js/script.js"></script>
   </body>
 </html>
